# backend/docs/swagger.yaml
@@ -1629,7 +1629,7 @@ paths:
             - $ref: '#/definitions/model.Response'
             - properties:
                 data:
-                  $ref: '#/definitions/dto.AccommodationsSuggestion'
+                  $ref: '#/definitions/dto.ActivityDetail'
               type: object
         "400":
           description: Bad Request
@@ -1700,7 +1700,7 @@ paths:
             - $ref: '#/definitions/model.Response'
             - properties:
                 data:
-                  $ref: '#/definitions/dto.PlacesSuggestion'
+                  $ref: '#/definitions/dto.ActivityDetail'
               type: object
         "400":
           description: Bad Request
@@ -1735,7 +1735,7 @@ paths:
             - $ref: '#/definitions/model.Response'
             - properties:
                 data:
-                  $ref: '#/definitions/dto.RestaurantsSuggestion'
+                  $ref: '#/definitions/dto.ActivityDetail'
               type: object
         "400":
           description: Bad Request
